--- a/css/exp.css
+++ b/css/exp.css
@@ -7,7 +7,7 @@
     gap: 6.25rem;
 }
 
-.exp-titulo {
+.exp-title {
     font-size: 8rem;
     padding: 0 2rem 2rem 0;
     line-height: 1;
@@ -17,7 +17,7 @@
     max-width: 4ch;
 }
 
-.exp-texto {
+.exp-text {
     place-self: start;
     font-size: 1.5rem;
     padding: 0;
@@ -27,11 +27,11 @@
     color: #342e1f;
 }
 
-.exp-texto strong {
+.exp-text strong {
     color: #141414;
 }
 
-.exp-quadro {
+.exp-frame {
     position: relative;
     background: #b8b8a1;
     gap: 10px 20px;
@@ -42,7 +42,7 @@
     margin-bottom: 20px;
 }
 
-.exp-quadro::before {
+.exp-frame::before {
     content: '';
     position: absolute;
     width: 0.25rem;
@@ -53,7 +53,7 @@
     top: 1.2rem;
 }
 
-.ano {
+.year {
     position: absolute;
     left: -6rem;
     top: 1.5rem;
@@ -63,14 +63,14 @@
     color: #525252;
 }
 
-.descricao {
+.description {
     grid-row: 2;
     font-size: 0.875rem;
     line-height: 1.4;
     color: #525252;
 }
 
-.exp-itens ul {
+.exp-items ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -79,51 +79,4 @@
     margin: 0;
 }
 
-.exp-itens li {
-    max-height: 1rem;
-    background: #ffffff;
-    margin: 0.3rem;
-    border-radius: 0.25rem;
-    line-height: 1.4;
-    padding: 0.4rem;
-    font-size: 0.875rem;
-}
-
-@media (max-width: 1000px) {
-    .exp-texto {
-        margin-right: 0;
-    }
-}
-
-@media (max-width: 800px) {
-    .exp {
-        grid-template-columns: 1fr;
-        gap: 40px;
-    }
-
-    .exp-titulo {
-        font-size: 3rem;
-        text-transform: capitalize;
-        color: #141414;
-        padding: 0;
-        word-break: normal;
-    }
-
-    .exp-texto {
-        font-size: 1.3rem;
-        margin-right: 0;
-    }
-
-    .ano {
-        position: initial;
-        order: 1;
-        width: initial;
-        text-align: left;
-    }
-}
-
-@media (max-width: 500px) {
-    .exp-quadro {
-        grid-template-columns: 1fr;
-    }
-}
+.exp-items li {
