--- a/css/formacao.css
+++ b/css/formacao.css
@@ -1,9 +1,9 @@
-.formacao {
+.education {
     background: #615745;
     color: #201e1a;
 }
 
-.formacao-container {
+.education-container {
     display: grid;
     max-width: 75rem;
     min-width: 200px;
@@ -14,12 +14,11 @@
     position: relative;
 }
 
-.formacao-container .bold {
+.education-container .bold {
     color: #3b3324;
-;
 }
 
-.formacao-container::after {
+.education-container::after {
     content: '';
     position: absolute;
     display: block;
@@ -30,7 +29,7 @@
     left: 1rem;
 }
 
-.formaçao-titulo {
+.education-title {
     font-size: 8rem;
     padding: 0 2rem 2rem 0;
     max-width: 5ch;
@@ -40,7 +39,7 @@
     line-height: 1;
 }
 
-.formacao-texto {
+.education-text {
     padding: 0;
     font-size: 1.5rem;
     margin-bottom: 3.5rem;
@@ -49,12 +48,11 @@
     color: #b8b8a1;
 }
 
-.formacao-texto strong {
+.education-text strong {
     color: #201e1a;
 }
 
-
-.formacao-itens {
+.education-items {
     display: flex;
     flex-wrap: wrap;
     gap: 1.2rem;
@@ -62,7 +60,7 @@
     padding: 20px;
 }
 
-.formacao-itens li {
+.education-items li {
     flex: 1;
     background: #eeeed3;
     padding: 1.25rem;
@@ -73,7 +71,7 @@
     position: relative;
 }
 
-.formacao-itens .bold::before {
+.education-items .bold::before {
     content: '';
     position: absolute;
     display: block;
@@ -84,37 +82,37 @@
     top: 3.2rem;
 }
 
-.faculdade-tipo {
+.university-type {
     margin-bottom: 0.7rem;
     font-size: 0.9rem;
     font-weight: normal;
     color: #342e1f;
 }
 
-.faculdade-instituiçao {
+.university-institution {
     color: #342e1f;
 }
 
-.formacao-itens li p {
+.education-items li p {
     margin-bottom: 2.5rem;
     line-height: 1.5rem;
     flex: 1;
 }
 
-.formacao-curso {
+.education-course {
     margin-bottom: 3.5rem;
     line-height: 2rem;
 }
 
-.formacao-idioma {
+.education-language {
     line-height: 2rem;
 }
 
-.formacao-curso span, .formacao-idioma span {
+.education-course span, .education-language span {
     color: #181614;
 }
 
-.formacao-curso h3 {
+.education-course h3 {
     position: relative;
     color: #201e1a;
     font-size: 0.9rem;
@@ -122,7 +120,7 @@
     margin-bottom: 1rem;
 }
 
-.formacao-curso h3::before {
+.education-course h3::before {
     background: url("../img/cursos.svg");
     content: '';
     display: block;
@@ -132,23 +130,23 @@
     left: -2rem;
 }
 
-.formacao-curso ul, .formacao-idioma ul{
+.education-course ul, .education-language ul {
     padding: 0;
     margin: 0;
 }
 
-.formacao-curso li {
+.education-course li {
     display: flex;
     justify-content: space-between;
     font-size: 1.12rem;
     line-height: 2.7rem;
 }
 
-.carga-horaria {
+.hours {
     color: #201e1a;
 }
 
-.formacao-idioma h3 {
+.education-language h3 {
     position: relative;
     color: #201e1a;
     font-size: 0.9rem;
@@ -156,7 +154,7 @@
     margin-bottom: 1rem;
 }
 
-.formacao-idioma h3::before {
+.education-language h3::before {
     background: url("../img/idiomas.svg");
     content: '';
     display: block;
@@ -166,19 +164,19 @@
     left: -2rem;
 }
 
-.formacao-idioma li {
+.education-language li {
     font-size: 1.12rem;
     line-height: 2.7rem;
 }
 
 @media (max-width: 800px) {
-    .formacao-container {
+    .education-container {
         grid-template-columns: 1fr;
         gap: 40px;
         padding: 2.5rem 1.25rem;
     }
 
-    .formaçao-titulo {
+    .education-title {
         font-size: 3rem;
         text-transform: capitalize;
         color: #eeeed3;
@@ -186,62 +184,58 @@
         word-break: normal;
     }
 
-    .formacao-texto {
+    .education-text {
         font-size: 1.3rem;
         line-height: 1.5rem;
         margin-right: 0;
     }
 
-    .formacao-itens {
+    .education-items {
         flex-wrap: nowrap;
         margin-bottom: 5rem;
     }
 
-    .formacao-curso h3::before {
+    .education-course h3::before {
         left: 0;
         top: -1.4rem;
     }
 
-    .formacao-idioma h3::before {
+    .education-language h3::before {
         left: 0;
         top: -1.4rem;
     }
 
-    .formacao-idioma {
+    .education-language {
         margin-bottom: 3rem;
     }
 }
 
 @media (max-width: 650px) {
-    .formacao-container {
+    .education-container {
         grid-template-columns: 1fr;
         gap: 40px;
         padding: 2.5rem 1.25rem;
     }
 
-    .formacao-itens {
+    .education-items {
         flex-wrap: nowrap;
         flex-direction: column;
-        grid-template-columns: 1fr;
     }
 }
 
 @media (max-width: 500px) {
-    .formacao {
+    .education {
         grid-template-columns: 1fr;
     }
 
-    .formacao-container {
+    .education-container {
         grid-template-columns: 0.8fr;
         gap: 20px;
         padding: 1.5rem .5rem;
     }
 
-    .formacao-itens {
+    .education-items {
         flex-wrap: nowrap;
         flex-direction: column;
-        grid-template-columns: 1fr;
     }
 }
-
-
