--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,5 @@
 @import "header.css";
 @import "intro.css";
 @import "exp.css";
-@import "formacao.css";
+@import "education.css";
 @import "footer.css";
